apply all dynamic pages of letter

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,9 @@
   body {
     @apply bg-background text-foreground;
   }
+  html {
+    @apply antialiased scroll-smooth;
+  }
 }
 
 @layer utilities {
